# cargoterm

./: Cargo.toml  README.md
.github/: AUTOMATION.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  exec.rs  history.rs  main.rs  ollama.rs  setup.rs  shell_init.rs  transcript.rs
