[package]
name = "cargoterm"
version = "0.6.1"
edition = "2024"

[dependencies]
rustyline = "14"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "process", "io-util", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
